--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -303,7 +303,7 @@ The remainder of the paper is structured as follows.
 
 - DESCRIPTION OF EUROSTAT -
 Eurostat\footnote{\url{http://ec.europa.eu/eurostat}} provides publicly available European aggregated data.
- SBE researchers have a strong interest in the availability of childcare services across the European Union Member States.
+SBE researchers have a strong interest in the availability of childcare services across European Union Member States.
 The variable \emph{formal childcare}\footnote{\url{http://appsso.eurostat.ec.europa.eu/nui/show.do?dataset=ilc_caindformal&lang=en}}
 stores the measured formal childcare in percent over the population of each age group.
 The present data collection refers to data on formal childcare and other types of care by the variables \emph{year}, \emph{duration} (0 hours, 1 to 29 hours a usual week; 30 hours or more a usual week), \emph{age} of the child (0-2 years; 3 to admission age for compulsory school; admission age for compulsory school to 12) and \emph{country}.
